src/GrammarParser_test.cpp
/* Generated by re2c 0.10.6 on Sun Oct 29 14:58:53 2006 */
/*
 * Copyright (C) 2006, GrammarSoft Aps
 * and the VISL project at the University of Southern Denmark.
 * All Rights Reserved.
 *
 * The contents of this file are subject to the GrammarSoft Public
 * License Version 1.0 (the "License"); you may not use this file
 * except in compliance with the License. You may obtain a copy of
 * the License at http://www.grammarsoft.com/GSPL or
 * http://visl.sdu.dk/GSPL.txt
 * 
 * Software distributed under the License is distributed on an "AS
 * IS" basis, WITHOUT WARRANTY OF ANY KIND, either express or
 * implied. See the License for the specific language governing
 * rights and limitations under the License.
 */

#include "stdafx.h"
#include "Strings.h"
#include <unicode/uregex.h>
#include "GrammarParser.h"
#include "Grammar.h"
#include "uextras.h"
#include <sys/stat.h>

using namespace CG3;
using namespace CG3::Strings;



#define YYCURSOR        input

YYCTYPE *GrammarParser::re2c_skipline(YYCTYPE *input) {
skipline_start:

{
	YYCTYPE yych;

	yych = *YYCURSOR;
	if(yych <= 0x000C) {
		if(yych <= 0x0009) {
			if(yych >= 0x0001) goto yy6;
		} else {
			if(yych == 0x000B) goto yy6;
			goto yy4;
		}
	} else {
		if(yych <= 0x0085) {
			if(yych <= 0x0084) goto yy6;
			goto yy4;
		} else {
			if(yych <= 0x2027) goto yy6;
			if(yych <= 0x2029) goto yy4;
			goto yy6;
		}
	}
	++YYCURSOR;
	{goto skipline_end;}
yy4:
	++YYCURSOR;
	{result->lines++; goto skipline_end;}
yy6:
	++YYCURSOR;
	{goto skipline_start;}
}

skipline_end:
	return YYCURSOR;
}

YYCTYPE *GrammarParser::re2c_parseCompositeTag(YYCTYPE *input, Set *set) {
	CG3::CompositeTag *ctag = result->allocateCompositeTag();
	marker = YYCURSOR;

parseCompositeTag_start:

{
	YYCTYPE yych;
	yych = *YYCURSOR;
	if(yych <= '#') {
		if(yych <= 0x000B) {
			if(yych <= 0x0008) {
				if(yych >= 0x0001) goto yy16;
			} else {
				if(yych == 0x000A) goto yy12;
				goto yy14;
			}
		} else {
			if(yych <= 0x001B) {
				if(yych <= 0x000C) goto yy12;
				if(yych <= 0x000D) goto yy14;
				goto yy16;
			} else {
				if(yych <= ' ') goto yy14;
				if(yych <= '"') goto yy16;
				goto yy19;
			}
		}
	} else {
		if(yych <= '[') {
			if(yych <= ')') {
				if(yych <= '\'') goto yy16;
				if(yych <= '(') goto yy21;
				goto yy23;
			} else {
				if(yych == ';') goto yy25;
				goto yy16;
			}
		} else {
			if(yych <= 0x0085) {
				if(yych <= '\\') goto yy18;
				if(yych <= 0x0084) goto yy16;
				goto yy12;
			} else {
				if(yych <= 0x2027) goto yy16;
				if(yych <= 0x2029) goto yy12;
				goto yy16;
			}
		}
	}
	++YYCURSOR;
	if((yych = *YYCURSOR) <= 0x001B) {
		if(yych <= 0x000A) {
			if(yych != 0x0009) goto yy28;
		} else {
			if(yych == 0x000C) goto yy28;
			if(yych >= 0x000E) goto yy28;
		}
	} else {
		if(yych <= '\'') {
			if(yych <= ' ') goto yy11;
			if(yych != '#') goto yy28;
		} else {
			if(yych <= ')') goto yy11;
			if(yych != ';') goto yy28;
		}
	}
yy11:
	{goto parseCompositeTag_end;}
yy12:
	++YYCURSOR;
	if((yych = *YYCURSOR) <= 0x001B) {
		if(yych <= 0x000A) {
			if(yych != 0x0009) goto yy28;
		} else {
			if(yych == 0x000C) goto yy28;
			if(yych >= 0x000E) goto yy28;
		}
	} else {
		if(yych <= '\'') {
			if(yych <= ' ') goto yy13;
			if(yych != '#') goto yy28;
		} else {
			if(yych <= ')') goto yy13;
			if(yych != ';') goto yy28;
		}
	}
yy13:
	{
		marker = YYCURSOR;
		result->lines++;
		goto parseCompositeTag_start;
		}
yy14:
	++YYCURSOR;
	yych = *YYCURSOR;
	goto yy32;
yy15:
	{
		marker = YYCURSOR;
		goto parseCompositeTag_start;
		}
yy16:
	++YYCURSOR;
	yych = *YYCURSOR;
	goto yy28;
yy17:
	{
		size_t length = (YYCURSOR - marker)+1;
		YYCTYPE *buffer = new YYCTYPE[length];
		buffer[length-1] = 0;
		u_strncpy(buffer, marker, (int32_t)length-1);
		CG3::Tag *tag = result->allocateTag(buffer);
		result->addTagToCompositeTag(tag, ctag);
		delete buffer;
		marker = YYCURSOR;
		goto parseCompositeTag_start;
		}
yy18:
	yych = *++YYCURSOR;
	if(yych <= '\'') {
		if(yych == '#') goto yy27;
		goto yy28;
	} else {
		if(yych <= ')') goto yy27;
		if(yych == ';') goto yy27;
		goto yy28;
	}
yy19:
	++YYCURSOR;
	{
		YYCURSOR = re2c_skipline(YYCURSOR);
		marker = YYCURSOR;
		goto parseCompositeTag_start;
		}
yy21:
	++YYCURSOR;
	{u_fprintf(ux_stderr, "Error: Mismatched ( on line %u!\n", result->lines); exit(1);}
yy23:
	++YYCURSOR;
	{goto parseCompositeTag_end;}
yy25:
	++YYCURSOR;
	{u_fprintf(ux_stderr, "Error: Found ; before ) on line %u!\n", result->lines); exit(1);}
yy27:
	++YYCURSOR;
	yych = *YYCURSOR;
yy28:
	if(yych <= ' ') {
		if(yych <= 0x000B) {
			if(yych == 0x0009) goto yy17;
			if(yych <= 0x000A) goto yy27;
			goto yy17;
		} else {
			if(yych == 0x000D) goto yy17;
			if(yych <= 0x001B) goto yy27;
			goto yy17;
		}
	} else {
		if(yych <= ')') {
			if(yych == '#') goto yy17;
			if(yych <= '\'') goto yy27;
			goto yy17;
		} else {
			if(yych <= ';') {
				if(yych <= ':') goto yy27;
				goto yy17;
			} else {
				if(yych != '\\') goto yy27;
			}
		}
	}
yy29:
	++YYCURSOR;
	yych = *YYCURSOR;
	if(yych <= 0x000C) {
		if(yych <= 0x0009) {
			if(yych <= 0x0008) goto yy27;
			goto yy17;
		} else {
			if(yych == 0x000B) goto yy17;
			goto yy27;
		}
	} else {
		if(yych <= ' ') {
			if(yych <= 0x000D) goto yy17;
			if(yych <= 0x001B) goto yy27;
			goto yy17;
		} else {
			if(yych == '\\') goto yy29;
			goto yy27;
		}
	}
yy31:
	++YYCURSOR;
	yych = *YYCURSOR;
yy32:
	if(yych <= 0x000B) {
		if(yych == 0x0009) goto yy31;
		if(yych <= 0x000A) goto yy15;
		goto yy31;
	} else {
		if(yych <= 0x000D) {
			if(yych <= 0x000C) goto yy15;
			goto yy31;
		} else {
			if(yych <= 0x001B) goto yy15;
			if(yych <= ' ') goto yy31;
			goto yy15;
		}
	}
}


parseCompositeTag_end:
	if (ctag->tags_map.empty()) {
		u_fprintf(ux_stderr, "Error: Empty () on line %u!\n", result->lines);
		exit(1);
	}
	result->addCompositeTagToSet(set, ctag);
	return YYCURSOR;
}

YYCTYPE *GrammarParser::re2c_parseTagList(YYCTYPE *input, Set *set) {
	marker = YYCURSOR;

parseTagList_start:

{
	YYCTYPE yych;
	yych = *YYCURSOR;
	if(yych <= '#') {
		if(yych <= 0x000B) {
			if(yych <= 0x0008) {
				if(yych >= 0x0001) goto yy41;
			} else {
				if(yych == 0x000A) goto yy37;
				goto yy39;
			}
		} else {
			if(yych <= 0x001B) {
				if(yych <= 0x000C) goto yy37;
				if(yych <= 0x000D) goto yy39;
				goto yy41;
			} else {
				if(yych <= ' ') goto yy39;
				if(yych <= '"') goto yy41;
				goto yy48;
			}
		}
	} else {
		if(yych <= '[') {
			if(yych <= ')') {
				if(yych <= '\'') goto yy41;
				if(yych <= '(') goto yy44;
				goto yy46;
			} else {
				if(yych == ';') goto yy50;
				goto yy41;
			}
		} else {
			if(yych <= 0x0085) {
				if(yych <= '\\') goto yy43;
				if(yych <= 0x0084) goto yy41;
				goto yy37;
			} else {
				if(yych <= 0x2027) goto yy41;
				if(yych <= 0x2029) goto yy37;
				goto yy41;
			}
		}
	}
	++YYCURSOR;
	if((yych = *YYCURSOR) <= 0x001B) {
		if(yych <= 0x000A) {
			if(yych != 0x0009) goto yy53;
		} else {
			if(yych == 0x000C) goto yy53;
			if(yych >= 0x000E) goto yy53;
		}
	} else {
		if(yych <= '\'') {
			if(yych <= ' ') goto yy36;
			if(yych != '#') goto yy53;
		} else {
			if(yych <= ')') goto yy36;
			if(yych != ';') goto yy53;
		}
	}
yy36:
	{goto parseTagList_end;}
yy37:
	++YYCURSOR;
	if((yych = *YYCURSOR) <= 0x001B) {
		if(yych <= 0x000A) {
			if(yych != 0x0009) goto yy53;
		} else {
			if(yych == 0x000C) goto yy53;
			if(yych >= 0x000E) goto yy53;
		}
	} else {
		if(yych <= '\'') {
			if(yych <= ' ') goto yy38;
			if(yych != '#') goto yy53;
		} else {
			if(yych <= ')') goto yy38;
			if(yych != ';') goto yy53;
		}
	}
yy38:
	{
		marker = YYCURSOR;
		result->lines++;
		goto parseTagList_start;
		}
yy39:
	++YYCURSOR;
	yych = *YYCURSOR;
	goto yy57;
yy40:
	{
		marker = YYCURSOR;
		goto parseTagList_start;
		}
yy41:
	++YYCURSOR;
	yych = *YYCURSOR;
	goto yy53;
yy42:
	{
		size_t length = (YYCURSOR - marker)+1;
		YYCTYPE *buffer = new YYCTYPE[length];
		buffer[length-1] = 0;
		u_strncpy(buffer, marker, (int32_t)length-1);
		CG3::CompositeTag *ctag = result->allocateCompositeTag();
		CG3::Tag *tag = result->allocateTag(buffer);
		result->addTagToCompositeTag(tag, ctag);
		result->addCompositeTagToSet(set, ctag);
		delete buffer;
		marker = YYCURSOR;
		goto parseTagList_start;
		}
yy43:
	yych = *++YYCURSOR;
	if(yych <= '\'') {
		if(yych == '#') goto yy52;
		goto yy53;
	} else {
		if(yych <= ')') goto yy52;
		if(yych == ';') goto yy52;
		goto yy53;
	}
yy44:
	++YYCURSOR;
	{
		YYCURSOR = re2c_parseCompositeTag(YYCURSOR, set);
		marker = YYCURSOR;
		goto parseTagList_start;
		}
yy46:
	++YYCURSOR;
	{u_fprintf(ux_stderr, "Error: Mismatched ) on line %u!\n", result->lines); exit(1);}
yy48:
	++YYCURSOR;
	{
		YYCURSOR = re2c_skipline(YYCURSOR);
		marker = YYCURSOR;
		goto parseTagList_start;
		}
yy50:
	++YYCURSOR;
	{goto parseTagList_end;}
yy52:
	++YYCURSOR;
	yych = *YYCURSOR;
yy53:
	if(yych <= ' ') {
		if(yych <= 0x000B) {
			if(yych == 0x0009) goto yy42;
			if(yych <= 0x000A) goto yy52;
			goto yy42;
		} else {
			if(yych == 0x000D) goto yy42;
			if(yych <= 0x001B) goto yy52;
			goto yy42;
		}
	} else {
		if(yych <= ')') {
			if(yych == '#') goto yy42;
			if(yych <= '\'') goto yy52;
			goto yy42;
		} else {
			if(yych <= ';') {
				if(yych <= ':') goto yy52;
				goto yy42;
			} else {
				if(yych != '\\') goto yy52;
			}
		}
	}
yy54:
	++YYCURSOR;
	yych = *YYCURSOR;
	if(yych <= 0x000C) {
		if(yych <= 0x0009) {
			if(yych <= 0x0008) goto yy52;
			goto yy42;
		} else {
			if(yych == 0x000B) goto yy42;
			goto yy52;
		}
	} else {
		if(yych <= ' ') {
			if(yych <= 0x000D) goto yy42;
			if(yych <= 0x001B) goto yy52;
			goto yy42;
		} else {
			if(yych == '\\') goto yy54;
			goto yy52;
		}
	}
yy56:
	++YYCURSOR;
	yych = *YYCURSOR;
yy57:
	if(yych <= 0x000B) {
		if(yych == 0x0009) goto yy56;
		if(yych <= 0x000A) goto yy40;
		goto yy56;
	} else {
		if(yych <= 0x000D) {
			if(yych <= 0x000C) goto yy40;
			goto yy56;
		} else {
			if(yych <= 0x001B) goto yy40;
			if(yych <= ' ') goto yy56;
			goto yy40;
		}
	}
}


parseTagList_end:
	return YYCURSOR;
}

YYCTYPE *GrammarParser::re2c_parseDelimiters(YYCTYPE *input) {
	CG3::Set *curset = result->allocateSet();
	curset->setName(stringbits[S_DELIMITSET]);
	curset->line = result->lines;

parseDelimiters_start:

{
	YYCTYPE yych;
	yych = *YYCURSOR;
	if(yych <= ':') {
		if(yych <= 0x000B) {
			if(yych <= 0x0000) goto yy60;
			if(yych == 0x000A) goto yy62;
			goto yy70;
		} else {
			if(yych <= 0x000C) goto yy62;
			if(yych == '#') goto yy66;
			goto yy70;
		}
	} else {
		if(yych <= 0x0084) {
			if(yych <= ';') goto yy68;
			if(yych == '=') goto yy64;
			goto yy70;
		} else {
			if(yych <= 0x0085) goto yy62;
			if(yych <= 0x2027) goto yy70;
			if(yych <= 0x2029) goto yy62;
			goto yy70;
		}
	}
yy60:
	++YYCURSOR;
	{goto parseDelimiters_end;}
yy62:
	++YYCURSOR;
	{result->lines++; goto parseDelimiters_start;}
yy64:
	++YYCURSOR;
	{YYCURSOR = re2c_parseTagList(YYCURSOR, curset); goto parseDelimiters_end;}
yy66:
	++YYCURSOR;
	{YYCURSOR = re2c_skipline(YYCURSOR); goto parseDelimiters_start;}
yy68:
	++YYCURSOR;
	{goto parseDelimiters_end;}
yy70:
	++YYCURSOR;
	{goto parseDelimiters_start;}
}


parseDelimiters_end:
	result->addSet(curset);
	result->delimiters = curset;
	return YYCURSOR;
}

YYCTYPE *GrammarParser::re2c_parsePreferredTargets(YYCTYPE *input) {
	marker = YYCURSOR;

parsePreferredTargets_start:

{
	YYCTYPE yych;
	yych = *YYCURSOR;
	if(yych <= '#') {
		if(yych <= 0x000B) {
			if(yych <= 0x0008) {
				if(yych >= 0x0001) goto yy80;
			} else {
				if(yych == 0x000A) goto yy76;
				goto yy78;
			}
		} else {
			if(yych <= 0x001B) {
				if(yych <= 0x000C) goto yy76;
				if(yych <= 0x000D) goto yy78;
				goto yy80;
			} else {
				if(yych <= ' ') goto yy78;
				if(yych <= '"') goto yy80;
				goto yy87;
			}
		}
	} else {
		if(yych <= '[') {
			if(yych <= ')') {
				if(yych <= '\'') goto yy80;
				if(yych <= '(') goto yy83;
				goto yy85;
			} else {
				if(yych == ';') goto yy89;
				goto yy80;
			}
		} else {
			if(yych <= 0x0085) {
				if(yych <= '\\') goto yy82;
				if(yych <= 0x0084) goto yy80;
				goto yy76;
			} else {
				if(yych <= 0x2027) goto yy80;
				if(yych <= 0x2029) goto yy76;
				goto yy80;
			}
		}
	}
	++YYCURSOR;
	if((yych = *YYCURSOR) <= 0x001B) {
		if(yych <= 0x000A) {
			if(yych != 0x0009) goto yy92;
		} else {
